--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,16 @@
-/* * {
-  margin: 0px;
-  padding: 0px;
-} */
+body {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji !important;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+.Box {
+  border: 1px solid #e1e4e8;
+  border-radius: 6px;
+  margin-right: 0;
+  margin-left: 0;
+}
 
 .Box-row {
   border-top: 1px solid #e1e4e8;
@@ -10,10 +19,11 @@
 .flex-auto {
   flex: auto !important;
 }
-/* .Box-row:first-of-type {
-
-} */
 
 #form {
   width: 50%;
+}
+
+.text-grey {
+  color: #586069 !important;
 }
