--- a/views/issues.pug
+++ b/views/issues.pug
@@ -9,29 +9,30 @@ html
         h1= "Issues in /" + projectName
         a(href=`/${projectName}/issues/new`)
           input(class="btn btn-success" type="button", value="New Issue")
-      if issues
-        each issue in issues
-          div.row.d-flex.Box-row.p0-mt-0
-            //- div.flex-shrink-0.pt-2.pl-3
-              span !
-            div.flex-auto.min-width-0.p-2.pr-3.pr-md-2            
-              span.h4= issue.issue_title
-              div.d-block
-                p= issue.issue_text
-              div.mt-1.text-small.text-gray
-                if issue.open
-                  span= `opened ${issue.created_on} by ${issue.created_by}`
-                  if issue.updated_on
-                    span= `, updated ${issue.updated_on}`                  
-                else
-                  span= `by ${issue.created_by} was closed ${issue.created_on}`
-              a.btn.btn-primary(href=`/${projectName}/issues/edit?issueId=${issue._id}`) Edit
-              a.btn.btn-danger(href=`/${projectName}/issues/delete?issueId=${issue._id}`) Delete                       
-            div.flex-shrink-0.col-3.pt-2.text-right.pr-3.no-wrap.d-flex.hide-sm
-              span.ml-2.flex-1.flex-shrink-0
-              span.ml-2.flex-1.flex-shrink-0
-              span.ml-2.flex-1.flex-shrink-0
-      else
-        div
-          h3 There's no issues in this project
+      div.Box.mt-3
+        if issues
+          each issue in issues
+            div.d-flex.Box-row.p0-mt-0
+              div.flex-shrink-0.pt-2.pl-3
+                span !
+              div.flex-auto.min-width-0.p-2.pr-3.pr-md-2            
+                span.text-dark.h4= issue.issue_title
+                div.d-block
+                  p= issue.issue_text
+                div.mt-1.text-small.text-grey
+                  if issue.open
+                    span= `opened ${issue.created_on} by ${issue.created_by}`
+                    if issue.updated_on
+                      span= `, updated ${issue.updated_on}`                  
+                  else
+                    span= `by ${issue.created_by} was closed ${issue.created_on}`
+                a.btn.btn-primary(href=`/${projectName}/issues/edit?issueId=${issue._id}`) Edit
+                a.btn.btn-danger(href=`/${projectName}/issues/delete?issueId=${issue._id}`) Delete                       
+              div.flex-shrink-0.col-3.pt-2.text-right.pr-3.no-wrap.d-flex.hide-sm
+                span.ml-2.flex-1.flex-shrink-0
+                span.ml-2.flex-1.flex-shrink-0
+                span.ml-2.flex-1.flex-shrink-0
+        else
+          div
+            h3 There's no issues in this project
     include includes/foot.pug
