fix bug with updated date and some css changes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body {
     sans-serif, Apple Color Emoji, Segoe UI Emoji !important;
   font-size: 14px;
   line-height: 1.5;
+  margin-top: 2em;
 }
 
 .Box {
