--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji !important;
-  font-size: 14px;
-  line-height: 1.5;
+
   margin-top: 2em;
 }
 
@@ -17,6 +16,10 @@ body {
   border-top: 1px solid #e1e4e8;
 }
 
+.Box-row:hover {
+  background-color: #f6f8fa;
+}
+
 .flex-auto {
   flex: auto !important;
 }
@@ -27,4 +30,16 @@ body {
 
 .text-grey {
   color: #586069 !important;
+}
+
+.StatusLabel {
+  font-size: 0.8em;
+  line-height: 1.3em;
+  background-color: #d93f0b;
+}
+
+.AssignedLabel {
+  font-size: 0.8em;
+  line-height: 1.3em;
+  background-color: #5319e7;
 }
