--- a/views/index.pug
+++ b/views/index.pug
@@ -5,8 +5,8 @@ html
     title= title    
   body
     div.container
-      h1.text-center.text-dark Issue Tracker   
-      
+      div.col.text-center          
+        a.h1.text-dark(href="/") Issue Tracker
       h2 User Stories:
       ul.list-group.mb-4
         li.list-group-item Prevent cross site scripting (XSS) attacks.
