--- a/views/issues.pug
+++ b/views/issues.pug
@@ -46,9 +46,9 @@ html
             div.d-flex.Box-row.p0-mt-0
               div.flex-shrink-0.pt-2.pl-3
                 if issue.open                  
-                  img(width="24", height="24", src="/svg/issue-opened.svg", alt="Issue opened icon")                   
+                  img(width="24", height="24", src="/svg/issue-opened.svg", alt="Issue opened icon", title="Open issue")                   
                 else                   
-                  img(width="24", height="24", src="/svg/issue-closed.svg", alt="Issue closed icon")
+                  img(width="24", height="24", src="/svg/issue-closed.svg", alt="Issue closed icon", title="Closed issue")
               div.flex-auto.min-width-0.p-2.pr-3.pr-md-2            
                 h4.d-inline-block.text-dark= issue.issue_title
                 if issue.status_text
